--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,4 +17,4 @@ spring:
       ddl-auto: none
 
 application:
-  description: Projeto Criado para o bootcamp DIO - Santander
+  description: Projeto Criado para o bootcamp DIO - Santander / Backend
